--- a/_includes/slide.html
+++ b/_includes/slide.html
@@ -2,4 +2,5 @@
   {% if post.title != "" %}<h1>{{ post.title }}</h1>{% endif %}
 
   {{ post.content }}
+  <h3>Hello World this is GP.</h3>
 </section>
